<resources>
    <string name="app_name">WaterIntakeTracker</string>
    <string name="onboarding_1">Your trusted companion in maintaining healthy hydration.</string>
    <string name="onboarding_2">Track your progress in real time with colorful graphs and charts.</string>
    <string name="next">NEXT</string>
    <string name="start">START</string>
    <string name="add">ADD</string>
    <string name="what_did_you_drink">What Did You Drink?</string>
    <string name="how_much_did_you_drink">How Much Did You Drink?</string>
    <string name="_0_ml">0 ml</string>
    <string name="_1000_ml">1000 ml</string>
    <string name="juice">Juice</string>
    <string name="water">Water</string>
    <string name="coke">Coke</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="_290ml">290ml</string>
    <string name="bottle">Bottle</string>
    <string name="_600ml">600ml</string>
    <string name="_1300ml">1300ml</string>
    <string name="remaining">Remaining</string>
    <string name="target">Target</string>
    <string name="_2600ml">2600ml</string>
    <string name="milk_tea">Milk Tea</string>
    <string name="_350ml">350ml</string>
    <string name="home">Home</string>
    <string name="_250ml">250ml</string>
    <string name="_0">0%</string>
    <string name="current_hydration">Current Hydration</string>
    <string name="_500_ml">500 ml</string>
    <string name="_79">79%</string>
    <string name="textview">TextView</string>
</resources>